# 4AGQL

./: .gitignore  Cargo.toml  Dockerfile.workspace.dev  Dockerfile.workspace.prod  docker-compose.prod.yml  docker-compose.yml  readme.md
auth-service/: Cargo.toml  readme.md
auth-service/src/: controller.rs  main.rs  mutation.rs  query.rs  schema.rs
classes-service/: Cargo.toml  readme.md
classes-service/src/: controller.rs  db.rs  mutation.rs  query.rs  request.rs  schema.rs
common/: Cargo.toml  readme.md
common/src/: lib.rs  schemas.rs  utils.rs
common/src/jwt/: external.rs  internal.rs  jwt_utils.rs  mod.rs
common/src/models/: mod.rs
front-service/: .eslintignore  .eslintrc.js  Dockerfile  Dockerfile.prod  app.vue  nuxt.config.ts  package-lock.json  package.json  readme.md  tailwind.config.ts  tsconfig.json
front-service/components/: ClassCard.vue  ClassCardProfessor.vue  GradeCard.vue  GradeTable.vue  Navbar.vue
front-service/composables/: useAuth.ts  useCurrentUser.ts  useDarkMode.ts  useMockData.ts
front-service/layouts/: default.vue
front-service/middleware/: auth.ts  role.ts
front-service/pages/: classes.vue  forgot-password.vue  grades.vue  index.vue  login.vue  myclasses.vue  mygrades.vue  profile.vue  register.vue
front-service/plugins/: apollo.ts  auth.client.ts  mock-apollo.ts
front-service/types/: apollo.d.ts  grade.ts  user.ts
grades-service/: Cargo.toml  readme.md
grades-service/src/: controller.rs  db.rs  main.rs  mutation.rs  query.rs  (+2 more)
mongo-init-scripts/: init-indexes.js
users-service/: Cargo.toml  readme.md
users-service/src/: controller.rs  db.rs  main.rs  model.rs  mutation.rs  query.rs  request.rs  schema.rs
(+7 files in other folders)
