[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
actix-web = "4"
async-graphql = { version = "7.0.16", features = ["bson", "chrono"] }
async-graphql-actix-web = "7.0.16"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = { version = "0.12.14", features = ["json"] }
serde_json = "1.0.140"
validator = { version = "0.20.0", features = ["derive"] }
mongodb = "3.2.3"
dotenv = "0.15.0"
futures-util = "0.3.31"
bcrypt = "0.17"
common = { path = "../common" }