[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
regex = "1.11.1"
chrono = "0.4.40"
once_cell = "1.21.1"
lazy_static = "1.5.0"
futures-util = "0.3.31"
mongodb = "3.2.2"
reqwest = { version = "0.12.14", features = ["json"] }
validator = { version = "0.20.0", features = ["derive"]}
async-graphql = { version = "7.0.16", features = ["bson", "chrono"] }

[lib]
name = "common"
path = "src/lib.rs"